A little improvement